unpackaged/main/default/objects/LTE__Site__c/LTE__Site__c.object-meta.xml
<CustomObject>
    <description>Sites are a collection of pages displayed in the lightning community.</description>
    <label>Community Site</label>
    <nameField>
        <label>Community Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>