unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Address_Book_Instructions__c.field-meta.xml
<CustomField>
    <fullName>LTE__Address_Book_Instructions__c</fullName>
    <description>This field displays as instructional text on the Address Book page in the community.</description>
    <inlineHelpText>This field displays as instructional text on the Address Book page in the community.</inlineHelpText>
    <label>Address Book Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>