unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Assign_Members_Contact_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>LTE__Assign_Members_Contact_Field_Set__c</fullName>
    <description>This field defines the field set to be used for the Add Member button on the assignments component.</description>
    <inlineHelpText>This field defines the field set to be used for the Add Member button on the assignments component.</inlineHelpText>
    <label>Assign Members Contact Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>