unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Captcha_Lightning_Component__c.field-meta.xml
<CustomField>
    <fullName>LTE__Captcha_Lightning_Component__c</fullName>
    <description>Defines the component that will be displayed for the captcha.</description>
    <inlineHelpText>Defines the component that will be displayed for the captcha.</inlineHelpText>
    <label>Captcha Lightning Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>