unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Community_ID__c.field-meta.xml
<CustomField>
    <fullName>LTE__Community_ID__c</fullName>
    <description>Defines the Community that houses this site.</description>
    <inlineHelpText>Defines the Community that houses this site.</inlineHelpText>
    <label>Community ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>