unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Community_Name__c.field-meta.xml
<CustomField>
    <fullName>LTE__Community_Name__c</fullName>
    <description>This field helps retrieve the community ID to relate the site to the appropriate community. Enter the exact community name here to have the community id populated in its field.</description>
    <inlineHelpText>This field helps retrieve the community ID to relate the site to the appropriate community. Enter the exact community name here to have the community id populated in its field.</inlineHelpText>
    <label>Community Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>