unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Cookie_Decline_Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>LTE__Cookie_Decline_Redirect_URL__c</fullName>
    <description>Required if Enable Cookie Prompt is checked. Field contains the URL to redirect to if the prompt is not accepted. This is conditionally required.</description>
    <inlineHelpText>Required if Enable Cookie Prompt is checked. Field contains the URL to redirect to if the prompt is not accepted. This is conditionally required.</inlineHelpText>
    <label>Cookie Decline Redirect URL</label>
    <type>Url</type>
</CustomField>