unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Create_Account_Override_URL__c.field-meta.xml
<CustomField>
    <fullName>LTE__Create_Account_Override_URL__c</fullName>
    <description>Providing a URL will hide the &quot;Create a user account&quot; checkbox on the authentication page and display the provided URL link in its place.</description>
    <inlineHelpText>Providing a URL will hide the &quot;Create a user account&quot; checkbox on the authentication page and display the provided URL link in its place.</inlineHelpText>
    <label>Create Account Override URL</label>
    <type>Url</type>
</CustomField>