unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Credit_Note_Header__c.field-meta.xml
<CustomField>
    <fullName>LTE__Credit_Note_Header__c</fullName>
    <description>Field set that will be displayed on the Credit Note Header</description>
    <inlineHelpText>Field set that will be displayed on the Credit Note Header</inlineHelpText>
    <label>Credit Note Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>