unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Credit_Note_Invoice_Line_Table__c.field-meta.xml
<CustomField>
    <fullName>LTE__Credit_Note_Invoice_Line_Table__c</fullName>
    <description>Field set that will be displayed for the credit line table</description>
    <inlineHelpText>Field set that will be displayed for the credit line table</inlineHelpText>
    <label>Credit Note Invoice Line Table</label>
    <length>255</length>
    <type>Text</type>
</CustomField>