unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Default_Event_Listing__c.field-meta.xml
<CustomField>
    <fullName>LTE__Default_Event_Listing__c</fullName>
    <description>This field defines the default view for the event listing page.</description>
    <inlineHelpText>This field defines the default view for the event listing page.</inlineHelpText>
    <label>Default Event Listing</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large Tile</fullName>
                <default>true</default>
                <label>Large Tile</label>
            </value>
            <value>
                <fullName>Small Tile</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Geo</fullName>
            </value>
            <value>
                <fullName>Tile</fullName>
                <isActive>false</isActive>
                <label>Tile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>