unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Disable_Next_Upcoming_Order_Quick_Pay__c.field-meta.xml
<CustomField>
    <fullName>LTE__Disable_Next_Upcoming_Order_Quick_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When check, the Next Upcoming Order quick pay box will be hidden in the community.</description>
    <inlineHelpText>When check, the Next Upcoming Order quick pay box will be hidden in the community.</inlineHelpText>
    <label>Disable Next Upcoming Order Quick Pay</label>
    <type>Checkbox</type>
</CustomField>