unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Disable_Open_Orders_Quick_Pay__c.field-meta.xml
<CustomField>
    <fullName>LTE__Disable_Open_Orders_Quick_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When check, the Open Orders quick pay box will be hidden in the community.</description>
    <inlineHelpText>When check, the Open Orders quick pay box will be hidden in the community.</inlineHelpText>
    <label>Disable Open Orders Quick Pay</label>
    <type>Checkbox</type>
</CustomField>