unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Display_Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>LTE__Display_Geo_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to display the geo-location view in the event listing page.</description>
    <inlineHelpText>Check this field to display the geo-location view in the event listing page.</inlineHelpText>
    <label>Display Geo Location View</label>
    <type>Checkbox</type>
</CustomField>