unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Display_Large_Tile_View__c.field-meta.xml
<CustomField>
    <fullName>LTE__Display_Large_Tile_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to display the large tile view in the event listing page.</description>
    <inlineHelpText>Check this field to display the large tile view in the event listing page.</inlineHelpText>
    <label>Display Large Tile View</label>
    <type>Checkbox</type>
</CustomField>