unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Enable_Access_Permissions__c.field-meta.xml
<CustomField>
    <fullName>LTE__Enable_Access_Permissions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Combined with access permissions, this field restricts visibility to the site.</description>
    <inlineHelpText>Combined with access permissions, this field restricts visibility to the site.</inlineHelpText>
    <label>RESERVED</label>
    <type>Checkbox</type>
</CustomField>