unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Enable_Captcha__c.field-meta.xml
<CustomField>
    <fullName>LTE__Enable_Captcha__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By checking this field, a captcha will be presented to users using the Create Account and Continue as Guest pages.</description>
    <inlineHelpText>By checking this field, a captcha will be presented to users using the Create Account and Continue as Guest pages.</inlineHelpText>
    <label>Enable Captcha</label>
    <type>Checkbox</type>
</CustomField>