unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Enable_Cookie_Prompt__c.field-meta.xml
<CustomField>
    <fullName>LTE__Enable_Cookie_Prompt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Site will display a prompt asking the user to accept the use of cookies. If not accepted, the user will be redirected to an external site.</description>
    <inlineHelpText>When checked, the Site will display a prompt asking the user to accept the use of cookies. If not accepted, the user will be redirected to an external site.</inlineHelpText>
    <label>Enable Cookie Prompt</label>
    <type>Checkbox</type>
</CustomField>