unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Enable_Event_Listing_Filter__c.field-meta.xml
<CustomField>
    <fullName>LTE__Enable_Event_Listing_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By checking this field, filters will be enabled for the event listing.</description>
    <inlineHelpText>By checking this field, filters will be enabled for the event listing.</inlineHelpText>
    <label>Enable Event Listing Filter</label>
    <type>Checkbox</type>
</CustomField>