unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Event_Listing_Filters__c.field-meta.xml
<CustomField>
    <fullName>LTE__Event_Listing_Filters__c</fullName>
    <description>This field holds the values for the fields that are used as filters in the Event Listing.</description>
    <inlineHelpText>This field holds the values for the fields that are used as filters in the Event Listing.</inlineHelpText>
    <label>Event Listing Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>