unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Event_Sort_Fields__c.field-meta.xml
<CustomField>
    <fullName>LTE__Event_Sort_Fields__c</fullName>
    <description>Defines the fields used to sort the results in the Events listing page.</description>
    <inlineHelpText>Defines the fields used to sort the results in the Events listing page.</inlineHelpText>
    <label>Event Sort Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>