unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Featured_Event_Carousel_Timer__c.field-meta.xml
<CustomField>
    <fullName>LTE__Featured_Event_Carousel_Timer__c</fullName>
    <description>The value defined in this field controls the frequency, in seconds, at which the banner scrolls from one image to the next.</description>
    <inlineHelpText>The value defined in this field controls the frequency, in seconds, at which the banner scrolls from one image to the next.</inlineHelpText>
    <label>Featured Event Carousel Timer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>