unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Geo_Location_Radius_Filter_Values__c.field-meta.xml
<CustomField>
    <fullName>LTE__Geo_Location_Radius_Filter_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enter comma separated values you wish to display as a radius filter when using the Geo-Location view. Example &quot;5, 10, 25, 50, 100&quot;.</description>
    <inlineHelpText>Enter comma separated values you wish to display as a radius filter when using the Geo-Location view. Example &quot;5, 10, 25, 50, 100&quot;.</inlineHelpText>
    <label>DEPRECATED</label>
    <type>Checkbox</type>
</CustomField>