unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Invoice_Customer_Info__c.field-meta.xml
<CustomField>
    <fullName>LTE__Invoice_Customer_Info__c</fullName>
    <description>Field set that will be displayed for the customer info</description>
    <inlineHelpText>Field set that will be displayed for the customer info</inlineHelpText>
    <label>Invoice Customer Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>