unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Invoice_Header__c.field-meta.xml
<CustomField>
    <fullName>LTE__Invoice_Header__c</fullName>
    <description>Field set that will be displayed on the Invoice Header</description>
    <inlineHelpText>Field set that will be displayed on the Invoice Header</inlineHelpText>
    <label>Invoice Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>