unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Invoice_Line_Table__c.field-meta.xml
<CustomField>
    <fullName>LTE__Invoice_Line_Table__c</fullName>
    <description>Field set that will be displayed for the invoice table</description>
    <inlineHelpText>Field set that will be displayed for the invoice table</inlineHelpText>
    <label>Invoice Line Table</label>
    <length>255</length>
    <type>Text</type>
</CustomField>