unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Invoices_Instructions__c.field-meta.xml
<CustomField>
    <fullName>LTE__Invoices_Instructions__c</fullName>
    <description>Text displays on the Orders Page in the community.</description>
    <inlineHelpText>Text displays on the Invoices Page in the community.</inlineHelpText>
    <label>Order Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>