unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>LTE__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used as the default site when no site is found on various pages in the community.</description>
    <inlineHelpText>Used as the default site when no site is found on various pages in the community.</inlineHelpText>
    <label>RESERVED</label>
    <type>Checkbox</type>
</CustomField>