unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Is_Published__c.field-meta.xml
<CustomField>
    <fullName>LTE__Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Site will be published and made available to the appropriate audience. Defaults unchecked.</description>
    <inlineHelpText>When checked, the Site will be published and made available to the appropriate audience. Defaults unchecked.</inlineHelpText>
    <label>RESERVED</label>
    <type>Checkbox</type>
</CustomField>