unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Login_Override_URL__c.field-meta.xml
<CustomField>
    <fullName>LTE__Login_Override_URL__c</fullName>
    <description>This field defines the Login Override URL for the related community.</description>
    <inlineHelpText>This field defines the Login Override URL for the related community.</inlineHelpText>
    <label>Login Override URL</label>
    <type>Url</type>
</CustomField>