unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Logo_Image__c.field-meta.xml
<CustomField>
    <fullName>LTE__Logo_Image__c</fullName>
    <description>Image to be displayed for the logo.</description>
    <inlineHelpText>Image to be displayed for the logo.</inlineHelpText>
    <label>Logo Image</label>
    <type>Url</type>
</CustomField>