unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Logo_Target_URL__c.field-meta.xml
<CustomField>
    <fullName>LTE__Logo_Target_URL__c</fullName>
    <description>When logo is clicked, user brought to the page populated here.</description>
    <inlineHelpText>When logo is clicked, user brought to the page populated here.</inlineHelpText>
    <label>Logo Target URL</label>
    <type>Url</type>
</CustomField>