unpackaged/main/default/objects/LTE__Site__c/fields/LTE__My_Company_Info_Instructions__c.field-meta.xml
<CustomField>
    <fullName>LTE__My_Company_Info_Instructions__c</fullName>
    <description>This field displays as instructional text on the My Company page in the community.</description>
    <inlineHelpText>This field displays as instructional text on the My Company page in the community.</inlineHelpText>
    <label>My Company Info Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>