unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Order_Header__c.field-meta.xml
<CustomField>
    <fullName>LTE__Order_Header__c</fullName>
    <description>Field set that will be displayed on the Order Header</description>
    <inlineHelpText>Field set that will be displayed on the Order Header</inlineHelpText>
    <label>Order Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>