unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Payment_Method_Instructions__c.field-meta.xml
<CustomField>
    <fullName>LTE__Payment_Method_Instructions__c</fullName>
    <description>This field displays as instructional text on the Payment Method page in the community.</description>
    <inlineHelpText>This field displays as instructional text on the Payment Method page in the community.</inlineHelpText>
    <label>Payment Method Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>