unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Payments_Page_Instructions__c.field-meta.xml
<CustomField>
    <fullName>LTE__Payments_Page_Instructions__c</fullName>
    <description>This field displays as instructional text on the Payments page in the community.</description>
    <inlineHelpText>This field displays as instructional text on the Payments page in the community.</inlineHelpText>
    <label>Payments Page Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>