unpackaged/main/default/objects/LTE__Site__c/fields/LTE__PDF_Print_Format__c.field-meta.xml
<CustomField>
    <fullName>LTE__PDF_Print_Format__c</fullName>
    <description>This defines the size for financial documents (invoices, receipts, etc.) when downloaded as pdf</description>
    <inlineHelpText>This defines the size for financial documents (invoices, receipts, etc.) when downloaded as pdf</inlineHelpText>
    <label>PDF Print Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Letter</fullName>
                <label>Letter: 8.5in x 11in</label>
            </value>
            <value>
                <fullName>Legal</fullName>
                <label>Legal: 8.5in x 14in</label>
            </value>
            <value>
                <fullName>Tabloid</fullName>
                <label>Tabloid: 11in x 17in</label>
            </value>
            <value>
                <fullName>Ledger</fullName>
                <label>Ledger: 17in x 11in</label>
            </value>
            <value>
                <fullName>A0</fullName>
                <label>A0: 33.1in x 46.8in</label>
            </value>
            <value>
                <fullName>A1</fullName>
                <label>A1: 23.4in x 33.1in</label>
            </value>
            <value>
                <fullName>A2</fullName>
                <label>A2: 16.5in x 23.4in</label>
            </value>
            <value>
                <fullName>A3</fullName>
                <label>A3: 11.7in x 16.5in</label>
            </value>
            <value>
                <fullName>A4</fullName>
                <label>A4: 8.27in x 11.7in</label>
            </value>
            <value>
                <fullName>A5</fullName>
                <label>A5: 5.83in x 8.27in</label>
            </value>
            <value>
                <fullName>A6</fullName>
                <label>A6: 4.13in x 5.83in</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>