unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Profile_Account_Fieldset_CSV__c.field-meta.xml
<CustomField>
    <fullName>LTE__Profile_Account_Fieldset_CSV__c</fullName>
    <description>Comma separated field set names that will be displayed in the Community on the My Company page.</description>
    <inlineHelpText>Comma separated field set names that will be displayed in the Community on the My Company page.</inlineHelpText>
    <label>Profile Account Fieldset(s) CSV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>