unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Receipt_Summary__c.field-meta.xml
<CustomField>
    <fullName>LTE__Receipt_Summary__c</fullName>
    <description>Field set that will be displayed for the Receipt header</description>
    <inlineHelpText>Field set that will be displayed for the Receipt header</inlineHelpText>
    <label>Receipt Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>