unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Refund_Summary__c.field-meta.xml
<CustomField>
    <fullName>LTE__Refund_Summary__c</fullName>
    <description>Field set that will be displayed for the Refund header</description>
    <inlineHelpText>Field set that will be displayed for the Refund header</inlineHelpText>
    <label>Refund Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>