unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Sales_Order_Customer_Info_Invoice__c.field-meta.xml
<CustomField>
    <fullName>LTE__Sales_Order_Customer_Info_Invoice__c</fullName>
    <description>Field set that will be displayed for the customer info</description>
    <inlineHelpText>Field set that will be displayed for the customer info</inlineHelpText>
    <label>Sales Order Customer Info (Invoice)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>