unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Sales_Order_Header_Invoice__c.field-meta.xml
<CustomField>
    <fullName>LTE__Sales_Order_Header_Invoice__c</fullName>
    <description>Field set that will be displayed on the Invoice Header</description>
    <inlineHelpText>Field set that will be displayed on the Invoice Header</inlineHelpText>
    <label>Sales Order Header (Invoice)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>