unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Sales_Order_Line_Table__c.field-meta.xml
<CustomField>
    <fullName>LTE__Sales_Order_Line_Table__c</fullName>
    <description>Field set that will be displayed for the sales order table</description>
    <inlineHelpText>Field set that will be displayed for the sales order table</inlineHelpText>
    <label>Sales Order Line Table</label>
    <length>255</length>
    <type>Text</type>
</CustomField>