unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Sales_Order_Line_Table_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>LTE__Sales_Order_Line_Table_Credit_Note__c</fullName>
    <description>Field set that will be displayed for the credit line table</description>
    <inlineHelpText>Field set that will be displayed for the credit line table</inlineHelpText>
    <label>Sales Order Line Table (Credit Note)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>