unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Sales_Order_Line_Table_Invoice__c.field-meta.xml
<CustomField>
    <fullName>LTE__Sales_Order_Line_Table_Invoice__c</fullName>
    <description>Field set that will be displayed for the invoice table</description>
    <inlineHelpText>Field set that will be displayed for the invoice table</inlineHelpText>
    <label>Sales Order Line Table (Invoice)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>