unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Site_URL__c.field-meta.xml
<CustomField>
    <fullName>LTE__Site_URL__c</fullName>
    <description>This field defines the URL for the related community.</description>
    <inlineHelpText>This field defines the URL for the related community.</inlineHelpText>
    <label>Site URL</label>
    <type>Url</type>
</CustomField>