unpackaged/main/default/objects/LTE__Site__c/fields/LTE__Store__c.field-meta.xml
<CustomField>
    <fullName>LTE__Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the store to be used for this site.</description>
    <inlineHelpText>Defines the store to be used for this site.</inlineHelpText>
    <label>Store</label>
    <referenceTo>OrderApi__Store__c</referenceTo>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>