unpackaged/main/default/objects/LTE__Site__c/listViews/LTE__All.listView-meta.xml
<ListView>
    <fullName>LTE__All</fullName>
    <columns>NAME</columns>
    <columns>LTE__Community_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>